Add SWIG and Python binding generation for windows
Including:
- Remove use of unique_ptrs
- Handle exceptions in SWIG
- Add python example dump tree

--- a/examples/ia2/CMakeLists.txt
+++ b/examples/ia2/CMakeLists.txt
@@ -14,3 +14,15 @@ target_link_libraries(
   # Items to link into the target
   PRIVATE ia2_inspect
 )
+
+if (AXA_PYTHON_MODULE)
+  add_custom_target(
+    dump_tree_ia2.py
+    ALL
+    DEPENDS
+      ia2_inspect
+      ia2_inspect.py
+    COMMAND
+      ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/dump_tree_ia2.py "${WIN_OUTPUT_DIRECTORY}/$<CONFIG>"
+  )
+endif (AXA_PYTHON_MODULE)
