--- a/lib/ia2/CMakeLists.txt
+++ b/lib/ia2/CMakeLists.txt
@@ -28,3 +28,44 @@ target_compile_definitions(
     # case all AXA_EXPORTS will result in a dllexport statement.
     axaccess_EXPORTS
 )
+
+if (AXA_PYTHON_MODULE)
+
+  # SWIG Instructions to build library bindings to different languages
+  # (only required if at least one binding is ON).
+
+  FIND_PACKAGE(SWIG REQUIRED)
+  INCLUDE(${SWIG_USE_FILE})
+
+  # Generate Python bindings using swig + python3
+
+  FIND_PACKAGE(Python3 COMPONENTS Interpreter Development.Module)
+  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+  INCLUDE_DIRECTORIES(${Python3_INCLUDE_DIRS})
+
+  SET_SOURCE_FILES_PROPERTIES(ia2_inspect.i PROPERTIES CPLUSPLUS ON)
+
+  SWIG_ADD_LIBRARY(
+    # The name of the c++ library used by python module
+    ia2_python_inspect
+    TYPE SHARED
+    SOURCES ia2_inspect.i
+    LANGUAGE python
+    # The "$<CONFIG> assumes we are using the Visual Studio generator
+    # which puts the built files in a Release or Debug folder.
+    OUTPUT_DIR "${WIN_OUTPUT_DIRECTORY}/$<CONFIG>"
+  )
+
+  TARGET_LINK_LIBRARIES(
+    ia2_python_inspect
+    ia2_inspect
+    ${Python3_LIBRARIES}
+  )
+
+  set_property(
+    TARGET ia2_python_inspect
+    PROPERTY
+      SWIG_USE_TARGET_INCLUDE_DIRECTORIES TRUE
+  )
+
+endif(AXA_PYTHON_MODULE)
