--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,16 +21,7 @@ project(
 # Use absolute paths for #includes
 set(BASEPATH "${CMAKE_SOURCE_DIR}")
 include_directories("${BASEPATH}")
-
-# Public headers
-file(
-  COPY ${PROJECT_SOURCE_DIR}/include 
-  DESTINATION ${PROJECT_BINARY_DIR}
-)
-
-include_directories(
-    ${PROJECT_BINARY_DIR}/include
-)
+include_directories("${BASEPATH}/include")
 
 # On windows, put all of the resulting libraries and executables in
 # `build/bin/<CONFIG>` where CONFIG is Debug, Release, etc, because
