Create NodeJS bindings for IA2

--- a/examples/ia2/CMakeLists.txt
+++ b/examples/ia2/CMakeLists.txt
@@ -21,8 +21,20 @@ if (AXA_PYTHON_MODULE)
     ALL
     DEPENDS
       ia2_inspect
-      ia2_inspect.py
+      ia2_python_inspect
     COMMAND
-      ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/dump_tree_ia2.py "${WIN_OUTPUT_DIRECTORY}/$<CONFIG>"
+      ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/dump_tree_ia2.py "${WIN_OUTPUT_DIRECTORY}"
+  )
+endif (AXA_PYTHON_MODULE)
+
+if (AXA_NODEJS_MODULE)
+  add_custom_target(
+    dump_tree_ia2.js
+    ALL
+    DEPENDS
+      ia2_inspect
+      ia2_node_inspect
+    COMMAND
+      ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/dump_tree_ia2.js "${WIN_OUTPUT_DIRECTORY}"
   )
 endif (AXA_PYTHON_MODULE)
