--- a/lib/atspi/binding.gyp.in
+++ b/lib/atspi/binding.gyp.in
@@ -13,6 +13,16 @@
       ],
       "cflags": [
         "<!@(pkg-config \"atspi-2\" --cflags)",
+        "-fexceptions",
+      ],
+      "cflags_cc": [
+        "-fexceptions",
+      ],
+      "cflags_cc!": [
+        "-fno-exceptions",
+      ],
+      "cflags!": [
+        "-fno-exceptions",
       ],
       "ldflags": [
         "<!@(pkg-config \"atspi-2\" --libs)",
