--- a/lib/atspi/binding.gyp.in
+++ b/lib/atspi/binding.gyp.in
@@ -14,6 +14,12 @@
       "cflags": [
         "<!@(pkg-config \"atspi-2\" --cflags)",
       ],
+      "cflags_cc!": [
+        "-fno-exceptions",
+      ],
+      "cflags!": [
+        "-fno-exceptions",
+      ],
       "ldflags": [
         "<!@(pkg-config \"atspi-2\" --libs)",
         "-lv8",
