WIP - getting new APIs to work with nodejs

--- a/examples/ia2/CMakeLists.txt
+++ b/examples/ia2/CMakeLists.txt
@@ -37,4 +37,4 @@ if (AXA_NODEJS_MODULE)
     COMMAND
       ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/dump_tree_ia2.js "${WIN_OUTPUT_DIRECTORY}"
   )
-endif (AXA_PYTHON_MODULE)
+endif (AXA_NODEJS_MODULE)
