Add workflow to launch Chromium and and dump its tree on Linux
This will supersede the existing workflow that builds NodeJS module on
Linux because it already includes that.

--- a/lib/atspi/binding.gyp.in
+++ b/lib/atspi/binding.gyp.in
@@ -28,9 +28,8 @@
       "cflags!": [
         "-fno-exceptions",
       ],
-      "ldflags": [
-        "<!@(pkg-config \"atspi-2\" --libs)",
-        "-lv8",
+      "libraries": [
+        "-latspi"
       ],
     }
   ]
