[ATSPI] Add python version of `dump_tree_atspi` example
The example is copied into `<BUILD>/examples/atspi`, and can be run
from there. To allow that, symbolic links are created inside the
example's dir for the files related to `atspi_inspect` python module,
so that the module can be found there.

Fixes #119 <https://github.com/Igalia/AXAccess/issues/119>

--- a/examples/atspi/CMakeLists.txt
+++ b/examples/atspi/CMakeLists.txt
@@ -9,6 +9,23 @@ target_link_libraries(
     atspi_inspect
 )
 
+if (AXA_PYTHON_MODULE)
+  add_custom_target(
+    dump_tree_atspi.py
+    ALL
+    DEPENDS
+      atspi_inspect
+      atspi_python_inspect
+    COMMAND
+      ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/dump_tree_atspi.py ${CMAKE_CURRENT_BINARY_DIR}/
+    COMMAND
+      ${CMAKE_COMMAND} -E create_symlink ${CMAKE_BINARY_DIR}/lib/atspi/_atspi_python_inspect.so ${CMAKE_CURRENT_BINARY_DIR}/_atspi_python_inspect.so
+    COMMAND
+      ${CMAKE_COMMAND} -E create_symlink ${CMAKE_BINARY_DIR}/lib/atspi/atspi_inspect.py ${CMAKE_CURRENT_BINARY_DIR}/atspi_inspect.py
+    VERBATIM
+  )
+endif (AXA_PYTHON_MODULE)
+
 if (AXA_NODEJS_MODULE)
   add_custom_target(
     dump_tree_atspi.js
