--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+project(AXAccess)
 cmake_minimum_required(VERSION 3.25)
 
 # Enable cmake_print_variables() and cmake_print_properties() for debugging
