--- a/lib/mac/binding.gyp.in
+++ b/lib/mac/binding.gyp.in
@@ -21,6 +21,7 @@
         "OTHER_LDFLAGS": [
           "-framework", "ApplicationServices",
           "-framework", "CoreFoundation",
+          "-framework", "AppKit",
         ],
       },
     }
