Add JS example for Mac

--- a/examples/mac/CMakeLists.txt
+++ b/examples/mac/CMakeLists.txt
@@ -2,15 +2,15 @@
 # defined in lib/mac
 add_executable(
   # Name
-  dump_tree_mac
+  dump_tree_axapi
 
   # Sources
-  dump_tree_mac.cc
+  dump_tree_axapi.cc
 )
 
 target_link_libraries(
   # Target to link (created above)
-  dump_tree_mac
+  dump_tree_axapi
 
   # Items to link into the target
   PRIVATE axapi_inspect
@@ -31,3 +31,17 @@ target_link_libraries(
   # Items to link into the target
   PRIVATE axapi_inspect
 )
+
+if (AXA_NODEJS_MODULE)
+  add_custom_target(
+    dump_tree_axapi.js
+    ALL
+    DEPENDS
+      axapi_inspect.node
+    COMMAND
+      ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/dump_tree_axapi.js ${CMAKE_CURRENT_BINARY_DIR}/dump_tree_axapi.js
+    COMMAND
+      ${CMAKE_COMMAND} -E create_symlink ${CMAKE_BINARY_DIR}/lib/mac/axapi_inspect.node ${CMAKE_CURRENT_BINARY_DIR}/axapi_inspect.node
+    VERBATIM
+  )
+endif (AXA_NODEJS_MODULE)
