[WIP] Add hyperlink support to AtspiNode
Note: This code works just fine and is leak-free for C++. The python
and node examples crash immediately. To test the new functionality
in python or node, comment out the `g_object_unref(interface_)`.
Figuring out how to fix the leak-or-crash problem is a WIP.

--- a/lib/atspi/CMakeLists.txt
+++ b/lib/atspi/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(
   atspi_action_interface.cc
   atspi_component_interface.cc
   atspi_document_interface.cc
+  atspi_hyperlink_interface.cc
   atspi_table_interface.cc
   atspi_table_cell_interface.cc
   atspi_text_interface.cc
