Add basic unit-test cmake infra and one (smoke) test example for AT-SPI backend (#174)
It is implemented using CTest infrastructure:
https://cmake.org/cmake/help/book/mastering-cmake/chapter/Testing%20With%20CMake%20and%20CTest.html

The idea is for this to be used as boilerplate/placeholder for adding
useful unit-tests in the future. We will need some API to craft
accessibility trees out of thin air (e.g, without depending on a running app)
to then start adding meaningful unit-tests against them.

Runnig the tests is as simple as a `make test`.

The patch includes:

- A new cmake feature flag AXA_UNIT_TESTS is added, ON by default.
- A new top-level `tests` dir is added, following the same structure as
  `examples` (one sub-dir for each backend).
- A single unit test `test_smoke` is added as boilerplate for the test
  infra. As with examples, there are 3 variants: a native, a Python and
  a NodeJS version.
- README updated with a new section `Testing`, and mention of the new feature flag.

Fixes #48 <https://github.com/Igalia/AXAccess/issues/48>

Co-authored-by: Valerie Young <spectranaut@igalia.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,12 @@ option(
   OFF
 )
 
+## Enable/disable Unit tests, ON by default
+option(
+  AXA_UNIT_TESTS
+  "Enable unit tests"
+  ON
+)
 
 if (AXA_BUILD_DOC)
   add_subdirectory(docs)
@@ -75,3 +81,8 @@ endif(WIN32)
 add_subdirectory(lib)
 add_subdirectory(examples)
 add_subdirectory(third_party)
+
+if (AXA_UNIT_TESTS)
+  include(CTest)
+  add_subdirectory(tests)
+endif (AXA_UNIT_TESTS)
