--- a/examples/atspi/CMakeLists.txt
+++ b/examples/atspi/CMakeLists.txt
@@ -6,7 +6,7 @@ add_executable(
 target_link_libraries(
   dump_tree_atspi
   PRIVATE
-    atspi_inspect
+    acacia_atspi
 )
 
 add_custom_target(
@@ -20,14 +20,14 @@ if (AXA_PYTHON_MODULE)
     dump_tree_atspi.py
     ALL
     DEPENDS
-      atspi_inspect
-      atspi_python_inspect
+      acacia_atspi
+      acacia_atspi_python
     COMMAND
       ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/dump_tree_atspi.py ${CMAKE_CURRENT_BINARY_DIR}/
     COMMAND
-      ${CMAKE_COMMAND} -E create_symlink ${CMAKE_BINARY_DIR}/lib/atspi/_atspi_python_inspect.so ${CMAKE_CURRENT_BINARY_DIR}/_atspi_python_inspect.so
+      ${CMAKE_COMMAND} -E create_symlink ${CMAKE_BINARY_DIR}/lib/atspi/_acacia_atspi_python.so ${CMAKE_CURRENT_BINARY_DIR}/_acacia_atspi_python.so
     COMMAND
-      ${CMAKE_COMMAND} -E create_symlink ${CMAKE_BINARY_DIR}/lib/atspi/atspi_inspect.py ${CMAKE_CURRENT_BINARY_DIR}/atspi_inspect.py
+      ${CMAKE_COMMAND} -E create_symlink ${CMAKE_BINARY_DIR}/lib/atspi/acacia_atspi.py ${CMAKE_CURRENT_BINARY_DIR}/acacia_atspi.py
     VERBATIM
   )
 endif (AXA_PYTHON_MODULE)
@@ -37,12 +37,12 @@ if (AXA_NODEJS_MODULE)
     dump_tree_atspi.js
     ALL
     DEPENDS
-      atspi_inspect
-      atspi_inspect_module
+      acacia_atspi
+      acacia_atspi_module
     COMMAND
       ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/dump_tree_atspi.js ${CMAKE_CURRENT_BINARY_DIR}/
     COMMAND
-      ${CMAKE_COMMAND} -E create_symlink ${CMAKE_BINARY_DIR}/lib/atspi/atspi_inspect.node ${CMAKE_CURRENT_BINARY_DIR}/atspi_inspect.node
+      ${CMAKE_COMMAND} -E create_symlink ${CMAKE_BINARY_DIR}/lib/atspi/acacia_atspi.node ${CMAKE_CURRENT_BINARY_DIR}/acacia_atspi.node
     VERBATIM
   )
 endif (AXA_NODEJS_MODULE)
