--- a/lib/atspi/binding.gyp.in
+++ b/lib/atspi/binding.gyp.in
@@ -1,7 +1,7 @@
 {
   "targets": [
     {
-      "target_name": "atspi_inspect",
+      "target_name": "acacia_atspi",
       "include_dirs": [
         "${CMAKE_CURRENT_SOURCE_DIR}",
         "${CMAKE_SOURCE_DIR}/include",
@@ -17,7 +17,7 @@
         "../../../lib/atspi/atspi_table_cell_interface.cc",
         "../../../lib/atspi/atspi_text_interface.cc",
         "../../../lib/atspi/atspi_value_interface.cc",
-        "./atspi_nodejs_inspect_wrap.cxx",
+        "./acacia_atspi_nodejs_wrap.cxx",
       ],
       "cflags": [
         "<!@(pkg-config \"atspi-2\" --cflags)",
